@@ -4015,11 +4015,25 @@ default: "p"
 Contains a sequence of single-character flags.  Each flag enables shortening
 of some message displayed by vifm in the TUI.  Flags:
 .br
-T \- truncate status-bar messages in the middle if they are too long to fit on \
-the command line.  "..." will appear in the middle.
+ - T \- truncate status-bar messages in the middle if they are too long to fit \
+on the command line.  "..." will appear in the middle.
 .br
-p \- use tilde shortening in view titles.
+ - p \- use tilde shortening in view titles.
 
+.TP
+.BI "'showtabline' 'stal'"
+type: enumeration
+.br
+default: multiple
+.br
+Specifies when tab line should be displayed.  Possible values:
+ - never    - never display tab line
+ - multiple - show tab line only when there are at least two tabs
+ - always   - display tab line always
+
+Alternatively 0, 1 and 2 Vim-like values  are also accepted and correspond to
+"never", "multiple" and "always" respectively.
+.TP
 .TP
 .BI 'sizefmt'
 type: string list
