@@ -3339,6 +3339,20 @@ of some message displayed by vifm in the TUI.  Flags:
       the command line.  "..." will appear in the middle.
   p - use tilde shortening in view titles.
 
+                                               *vifm-'showtabline'*
+                                               *vifm-'stal'*
+showtabline stal
+type: enumeration
+default: multiple
+
+Specifies when tab line should be displayed.  Possible values:
+ - never    - never display tab line
+ - multiple - show tab line only when there are at least two tabs
+ - always   - display tab line always
+
+Alternatively 0, 1 and 2 Vim-like values  are also accepted and correspond to
+"never", "multiple" and "always" respectively.
+
                                                 *vifm-'sizefmt'*
 sizefmt
 type: string list
