@@ -213,6 +213,7 @@ cfg_init(void)
 	cfg.sizefmt.ieci_prefixes = 0;
 
 	cfg.pane_tabs = 0;
+	cfg.show_tab_line = STL_MULTIPLE;
 }
 
 void
