@@ -80,6 +80,14 @@ typedef enum
 }
 ViewDirSize;
 
+/* Possible values of cfg.show_tab_line. */
+enum
+{
+	STL_NEVER,    /* Tab line should never be displayed. */
+	STL_MULTIPLE, /* Display tab line only if there are at least two tabs. */
+	STL_ALWAYS,   /* Display tab line always. */
+};
+
 /* Indexes for cfg.type_decs. */
 enum
 {
@@ -268,7 +276,9 @@ typedef struct config_t
 	}
 	sizefmt;
 
-	int pane_tabs; /* Whether tabs are local to panes. */
+	/* Settings related to tabs. */
+	int pane_tabs;     /* Whether tabs are local to panes. */
+	int show_tab_line; /* When tab line should be displayed. */
 }
 config_t;
 
