@@ -1007,6 +1007,8 @@ write_options(FILE *const fp)
 	fprintf(fp, "=shell=%s\n", escape_spaces(cfg.shell));
 	fprintf(fp, "=shortmess=%s\n",
 			escape_spaces(get_option_value("shortmess", OPT_GLOBAL)));
+	fprintf(fp, "=showtabline=%s\n",
+			escape_spaces(get_option_value("showtabline", OPT_GLOBAL)));
 	fprintf(fp, "=sizefmt=%s\n",
 			escape_spaces(get_option_value("sizefmt", OPT_GLOBAL)));
 #ifndef _WIN32
