@@ -96,6 +96,7 @@ const char *tags[] = {
 	"vifm-'shell'",
 	"vifm-'shm'",
 	"vifm-'shortmess'",
+	"vifm-'showtabline'",
 	"vifm-'sizefmt'",
 	"vifm-'slowfs'",
 	"vifm-'smartcase'",
@@ -104,6 +105,7 @@ const char *tags[] = {
 	"vifm-'sortgroups'",
 	"vifm-'sortnumbers'",
 	"vifm-'sortorder'",
+	"vifm-'stal'",
 	"vifm-'statusline'",
 	"vifm-'stl'",
 	"vifm-'suggestoptions'",
