@@ -394,6 +394,7 @@ hi TabLine
 " "lsoptions" should be highlighted as 'option'
 " "previewprg" should be highlighted as 'option'
 " "tabscope" should be highlighted as 'option'
+" "showtabline" and "stal" should be highlighted as 'option'
 set dotfiles nodotfiles invdotfiles dotfiles!
 set caseoptions
 set sizefmt
@@ -402,6 +403,7 @@ set milleroptions
 set lsoptions
 set previewprg
 set tabscope
+set showtabline stal
 
 " "term" should be highlighted as a function()
 echo term('cmd')
